2004-03-17  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* gas/cfi/cfi-sh-1.d: New file.
	* gas/cfi/cfi-sh-1.s: Likewise.	
	* gas/cfi/cfi.exp: Add SH case.

2004-03-16  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/altivec.d: Update.
	* gas/ppc/altivec_xcoff.d: Update.
	* gas/ppc/altivec_xcoff64.d: Update.
	* gas/ppc/astest.d: Update.
	* gas/ppc/astest2.d: Update.
	* gas/ppc/astest2_64.d: Update.
	* gas/ppc/astest64.d: Update.
	* gas/ppc/booke.d: Update.
	* gas/ppc/booke_xcoff.d: Update.
	* gas/ppc/booke_xcoff64.d: Update.
	* gas/ppc/e500.d: Update.
	* gas/ppc/power4.d: Update.
	* gas/ppc/test1elf32.d: Update.
	* gas/ppc/test1elf64.d: Update.
	* gas/ppc/test1xcoff32.d: Update.

2004-03-15  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/padlock.s: Pad with .p2align.
	* gas/i386/padlock.d: Adjust.

2004-03-12  Michal Ludvig  <mludvig@suse.cz>

	* gas/i386/padlock.s, gas/i386/padlock.d: New tests for
	VIA PadLock instructions.
	* gas/i386/i386.exp: Run padlock tests.

2004-03-12  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/katmai.d: Revert last change.

	* gas/i386/katmai.d: Adjust for clflush change.

2004-03-08  Andreas Jaeger  <aj@suse.de>

	* gas/cfi/cfi-s390x-1.d: Adjust offsets.

2004-03-07  Richard Henderson  <rth@redhat.com>

	* gas/cfi/cfi-common-2.d, gas/cfi/cfi-i386.d: Adjust offsets.

2004-03-07  Andreas Jaeger  <aj@suse.de>

	* gas/cfi/cfi-x86_64.d: Adjust offsets.

2004-03-07  Richard Henderson  <rth@redhat.com>

	* gas/alpha/elf-reloc-8.d, gas/cfi/cfi-alpha-1.d,
	gas/cfi/cfi-alpha-2.d, gas/cfi/cfi-alpha-3.d, gas/cfi/cfi-common-1.d,
	gas/cfi/cfi-common-2.d, gas/cfi/cfi-common-3.d: Adjust offsets.

2004-03-03  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* gas/sh/sh64/err-dsp.s: Fix expected error message.

2004-03-01  Richard Sandiford  <rsandifo@redhat.com>

	* gas/frv/fr405-insn.[sdl]: New test.
	* gas/frv/fr450-spr.[sd]: New test.
	* gas/frv/fr450-insn.[sdl]: New test.
	* gas/frv/fr450-media-issue.[sl]: New test.