@@ -1,3 +1,8 @@
+2004-03-22  Hans-Peter Nilsson  <hp@axis.com>
+
+	* gas/cris/regreg.d: Assemble with --no-mul-bug-abort.
+	* gas/cris/mulbug-err-1.s, gas/cris/rd-mulbug-1.d: New tests.
+
 2004-03-17  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	* gas/cfi/cfi-sh-1.d: New file.
